tests/neg-macros/i2XYZW/Test_2.scala
package repro
import Macros.*
object Test:
  val v = V(1)
  val a = v + V(0)          // error
  val b = v + (v + V(0))    // error
